Fix vertical spacing overriding normalization #2100

--- a/src/html-pages/create-user-account-form-page/_index.scss
+++ b/src/html-pages/create-user-account-form-page/_index.scss
@@ -13,6 +13,10 @@
   p {
     color: settings.$colour-alert;
   }
+
+  ul {
+    margin-top: 0;
+  }
 }
 
 .create-user-account-form-page__container {
